compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__echo__echo_evaluates_printed_value_before_message.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/echo.rs
assertion_line: 43
expression: "\npub fn main() {\n  echo name() as case name() {\n    \"Giacomo\" -> \"hello Jak!\"\n    _ -> \"hello!\"\n  }\n}\n\nfn name() { \"Giacomo\" }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  echo name() as case name() {
    "Giacomo" -> "hello Jak!"
    _ -> "hello!"
  }
}

fn name() { "Giacomo" }


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import {
  Empty as $Empty,
  NonEmpty as $NonEmpty,
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

function name() {
  return "Giacomo";
}

export function main() {
  return echo(
    name(),
    (() => {
      let $ = name();
      if ($ === "Giacomo") {
        return "hello Jak!";
      } else {
        return "hello!";
      }
    })(),
    "src/module.gleam",
    3,
  );
}

// ...omitted code from `templates/echo.mjs`...
