compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__echo__echo_with_a_block.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/echo.rs
assertion_line: 136
expression: "\npub fn main() {\n  echo {\n    Nil\n    1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  echo {
    Nil
    1
  }
}


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import {
  Empty as $Empty,
  NonEmpty as $NonEmpty,
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

export function main() {
  let _block;
  {
    undefined;
    _block = 1;
  }
  return echo(_block, undefined, "src/module.gleam", 3);
}

// ...omitted code from `templates/echo.mjs`...
