compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__echo__echo_with_a_function_call.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/echo.rs
assertion_line: 109
expression: "\npub fn main() {\n  echo wibble(1, 2)\n}\n\nfn wibble(n: Int, m: Int) { n + m }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  echo wibble(1, 2)
}

fn wibble(n: Int, m: Int) { n + m }


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import {
  Empty as $Empty,
  NonEmpty as $NonEmpty,
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

function wibble(n, m) {
  return n + m;
}

export function main() {
  return echo(wibble(1, 2), undefined, "src/module.gleam", 3);
}

// ...omitted code from `templates/echo.mjs`...
