compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__echo__echo_with_a_panic.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/echo.rs
assertion_line: 98
expression: "\npub fn main() {\n  echo panic\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  echo panic
}


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import {
  Empty as $Empty,
  NonEmpty as $NonEmpty,
  CustomType as $CustomType,
  makeError,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main() {
  let _block;
  throw makeError(
    "panic",
    FILEPATH,
    "my/mod",
    3,
    "main",
    "`panic` expression evaluated.",
    {}
  )
  return echo(_block, undefined, "src/module.gleam", 3);
}

// ...omitted code from `templates/echo.mjs`...
