compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__echo__echo_with_a_simple_expression.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/echo.rs
assertion_line: 5
expression: "\npub fn main() {\n  echo 1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  echo 1
}


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import {
  Empty as $Empty,
  NonEmpty as $NonEmpty,
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

export function main() {
  return echo(1, undefined, "src/module.gleam", 3);
}

// ...omitted code from `templates/echo.mjs`...
